# unidb

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  architecture.md  pyproject.toml
.github/workflows/: python_ci.yaml
src/: main.py
src/application/: interfaces.py  models.py
src/application/services/: __init__.py  copy_files.py  exceptions.py  setup_uniprot_database.py  uniprot_operator.py
src/core/: common_types.py  config.py  exceptions.py  interfaces.py  logging_config.py  models.py
src/core/utils/: __init__.py  process_awaitables.py  process_globals.py  time_measure.py
src/domain/: exceptions.py  interfaces.py  models.py
src/domain/entities/: __init__.py  constants.py  sequence.py  tables.py  taxonomy.py
src/domain/services/: batch_copier.py
src/domain/services/queue_manager/: __init__.py  config.py  queue_manager.py
src/infrastructure/: models.py
src/infrastructure/database/: common_types.py  exceptions.py
src/infrastructure/database/postgresql/: __init__.py  adapter.py  config.py  database_lifecycle.py  get_available_connections_amount.py  queries.py  setup_config.py  uniprot_lifecycle.py
src/infrastructure/preparation/: __init__.py  constants.py  get_file_size.py
src/infrastructure/preparation/prepare_files/: __init__.py  exceptions.py  file_operations.py  prepare_files.py  preparer.py  update_checker.py
src/infrastructure/preparation/prepare_files/download/: __init__.py  config.py  download_components.py  download_files.py  downloader.py  downloader_components.py  file_chunker.py  get_file_size.py
src/infrastructure/preparation/prepare_system/: __init__.py  config.py  exceptions.py  models.py  preparer.py
src/infrastructure/process_data/: __init__.py  calculate_workers_to_split_trembl_file.py  create_trembl_iterator_partial.py  exceptions.py  iterator_table_mapping.py  stick_iterators_to_tables.py
src/infrastructure/process_data/ncbi/: __init__.py  models.py  parsers.py  presenters.py  utils.py
src/infrastructure/process_data/ncbi/iterators/: __init__.py  ncbi_iterator.py  taxonomy_iterator.py
src/infrastructure/process_data/uniprot/fasta/: __init__.py  chunk_range_iterator.py  iterator.py  parser.py
src/infrastructure/ui/: cli.py
src/tests/integration/: conftest.py  test_concatenate_files.py  test_database_setup.py  test_database_setup_when_archives_were_downloaded.py  test_database_setup_when_files_were_downloaded.py  test_decompression_after_concatenation.py  test_downloaders.py  test_fasta_file_chunker.py  test_fasta_iterator.py  test_file_operations.py  test_ncbi_iterator.py  test_prepare_files.py  test_taxonomy_iterator.py  test_update_checker.py
src/tests/unit/: test_download_file_chunker.py  test_fasta_parser.py  test_get_file_size.py  test_ncbi_parsers.py  test_process_awaitables.py  test_queue_manager.py  test_setup_config_postgresql.py
