[project]
name = "unidb"
authors = [
    {name = "Denis Matsuga", email = "HitokiriDeepWeb@yandex.ru"},
]
version = "0.1.0"
description = "Setup UniProt database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.16",
    "asyncpg>=0.30.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "aioresponses>=0.7.8",
    "coverage>=7.9.1",
    "ruff>=0.12.0",
    "pre-commit>=4.2.0",
    "docker>=7.1.0",
    "pytest-watcher",
]

[tool.pytest.ini_options]
pythonpath = ". src"
asyncio_default_fixture_loop_scope = "session"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning:multiprocessing:",
]

[tool.ruff.lint]
select = [
    "F",
    "W292",
    "W293",
    "B",
    "I",
    "SIM",
    "N",
    "E",
]

ignore = ["F841", "F401", "E501", "F821", "N818", "SIM115"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention="pep257"

[tool.uv.sources]
pytest-watcher = { git = "https://github.com/HitokiriDeepWeb/pytest-watcher.git" }
